// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unsupported optional chains Builtin global method: code 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Number = ____lualib.__TS__Number
local ____opt_0 = Number
if ____opt_0 ~= nil then
    __TS__Number(\\"3\\")
end"
`;

exports[`Unsupported optional chains Builtin global method: diagnostics 1`] = `"main.ts(2,17): error TSTL: Optional calls are not supported for builtin or language extension functions."`;

exports[`Unsupported optional chains Builtin global property: code 1`] = `
"local ____opt_0 = console
if ____opt_0 ~= nil then
    print(\\"3\\")
end"
`;

exports[`Unsupported optional chains Builtin global property: diagnostics 1`] = `"main.ts(2,17): error TSTL: Optional calls are not supported for builtin or language extension functions."`;

exports[`Unsupported optional chains Builtin prototype method: code 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__ArrayForEach = ____lualib.__TS__ArrayForEach
local ____opt_0 = ({1, 2, 3, 4}).forEach
if ____opt_0 ~= nil then
    __TS__ArrayForEach(
        {1, 2, 3, 4},
        function()
        end
    )
end"
`;

exports[`Unsupported optional chains Builtin prototype method: diagnostics 1`] = `"main.ts(2,17): error TSTL: Optional calls are not supported for builtin or language extension functions."`;

exports[`Unsupported optional chains Compile members only: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    ---
    -- @compileMembersOnly
    local A = 0
    ---
    -- @compileMembersOnly
    local B = 2
    ---
    -- @compileMembersOnly
    local C = 3
    ---
    -- @compileMembersOnly
    local D = \\"D\\"
    local ____opt_0 = TestEnum
    if ____opt_0 ~= nil then
        local ____ = B
    end
end
return ____exports"
`;

exports[`Unsupported optional chains Compile members only: diagnostics 1`] = `"main.ts(10,17): error TSTL: Optional calls are not supported on enums marked with @compileMembersOnly."`;

exports[`Unsupported optional chains Language extensions: code 1`] = `
"local ____opt_0 = ({}).has
if ____opt_0 ~= nil then
    local ____ = nil[3] ~= nil
end"
`;

exports[`Unsupported optional chains Language extensions: diagnostics 1`] = `"main.ts(2,17): error TSTL: Optional calls are not supported for builtin or language extension functions."`;
